objects/House__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <label>Bathrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bedroom__c</fullName>
        <label>Bedroom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Name__c</fullName>
        <label>House Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>House</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>House_Name__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>Zip__c</columns>
        <columns>Bedroom__c</columns>
        <columns>Bathrooms__c</columns>
        <columns>Price__c</columns>
        <columns>Picture__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>House</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>House</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>